--- a/client/src/components/GamePanel/panelStyles.css
+++ b/client/src/components/GamePanel/panelStyles.css
@@ -3,3 +3,13 @@
     margin:auto;
     
 }
+.picture-card{
+    width: 200px;
+    height: 200px;
+    float:left;
+    margin: 30px;
+}
+img{
+    width: 200px;
+    height: 200px;
+}
