styling changes to game cards, navbar, and footer

--- a/client/src/components/ScoreBar/styles.css
+++ b/client/src/components/ScoreBar/styles.css
@@ -4,6 +4,13 @@
     margin-left: 40px;
 }
 
+.navbar-dark{
+    position:fixed;
+    top:0px;
+    right:0px;
+    left:0px;
+}
+
 .score-bar{
     color : whitesmoke;
     font-size: 2em ;
