--- a/client/src/components/GamePanel/panelStyles.css
+++ b/client/src/components/GamePanel/panelStyles.css
@@ -1,15 +1,20 @@
 .game-block{
-    width:60%;
-    margin:auto;
+    width:80%;
+    margin-left:auto;
+    margin-right:auto;
     
 }
+.panel-container{
+    justify-content: center;
+}
 .picture-card{
-    width: 200px;
-    height: 200px;
+    width: 22%;
+    height: 175px;
     float:left;
-    margin: 30px;
+    margin:1.5%  1.5%  0% 1.5% ;
+
 }
 img{
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
 }
