fixed font styling for navBar.

--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,9 @@ footer{
   }
   body{
     overflow-y: scroll;
+    font-size:12px
   }
+
 }
 @media only screen and (max-width: 840px) {
   .jumbotron{
