--- a/src/components/ScoreBar/styles.css
+++ b/src/components/ScoreBar/styles.css
@@ -23,6 +23,11 @@ body{
     color : whitesmoke;
     font-size: 2em ;
 }
+@media only screen and (max-width: 1000px){
+    body{
+        font-size: 12px ;
+    }
+}
 @media only screen and (max-width: 910px){
     .nav-item{
         margin-right: auto;
